--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 not.found=\u6ca1\u6709\u627e\u5230{0}
+invalid.param=\u65e0\u6548\u53c2\u6570\uff1a{0}
 wrong.confirmed.password=\u786e\u8ba4\u5bc6\u7801\u9519\u8bef
