--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ invalid.param=\u65e0\u6548\u53c2\u6570\uff1a{0}
 missing.param=\u7f3a\u5931\u53c2\u6570\uff1a{0}
 wrong.confirmed.password=\u786e\u8ba4\u5bc6\u7801\u9519\u8bef
 wrong.current.password=\u5f53\u524d\u5bc6\u7801\u9519\u8bef
+optimistic.locking.failure=\u5f53\u524d\u6570\u636e\u5df2\u5728\u5176\u4ed6\u5730\u65b9\u88ab\u4fee\u6539\u8fc7\uff0c\u4e3a\u4e86\u9632\u6b62\u91cd\u8981\u6570\u636e\u88ab\u8986\u76d6\uff0c\u8bf7\u9000\u51fa\u5f53\u524d\u754c\u9762\u91cd\u65b0\u64cd\u4f5c
