--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
+ExceptionTranslationFilter.insufficientAuthentication=\u8bf7\u5148\u767b\u5f55\u518d\u64cd\u4f5c
 not.found=\u6ca1\u6709\u627e\u5230{0}
 invalid.param=\u65e0\u6548\u53c2\u6570\uff1a{0}
 missing.param=\u7f3a\u5931\u53c2\u6570\uff1a{0}
