Add verification supports

--- a/cornerstone-core/src/main/resources/i18n/messages.properties
+++ b/cornerstone-core/src/main/resources/i18n/messages.properties
@@ -9,3 +9,4 @@ name.already.exists=\u540d\u5b57\u5df2\u7ecf\u5b58\u5728
 username.already.exists=\u7528\u6237\u540d\u5df2\u7ecf\u5b58\u5728
 wrong.confirmed.password=\u786e\u8ba4\u5bc6\u7801\u9519\u8bef
 wrong.current.password=\u5f53\u524d\u5bc6\u7801\u9519\u8bef
+wrong.verification.code=\u9a8c\u8bc1\u7801\u9519\u8bef
