--- a/cornerstone-core/src/main/resources/i18n/messages.properties
+++ b/cornerstone-core/src/main/resources/i18n/messages.properties
@@ -1,4 +1,5 @@
 ExceptionTranslationFilter.insufficientAuthentication=\u8bf7\u5148\u767b\u5f55\u518d\u64cd\u4f5c
+DefaultDaoAuthenticationProvider.maxAttemptsExceeded=\u767b\u5f55\u5c1d\u8bd5\u6b21\u6570\u8d85\u8fc7\u6700\u5927\u9650\u5236\u6570\uff1a{0}
 not.found=\u6ca1\u6709\u627e\u5230{0}
 invalid.param=\u65e0\u6548\u53c2\u6570\uff1a{0}
 missing.param=\u7f3a\u5931\u53c2\u6570\uff1a{0}
